opam-version: "2.0"
maintainer: "Cristiano Calcagno"
authors: [ "Cristiano Calcagno" ]
license: "MIT"
homepage: "https://github.com/cristianoc/gentype#readme"
bug-reports: "https://github.com/cristianoc/gentype/issues"
dev-repo: "git://github.com/cristianoc/genType.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"         {"4.02.3" | "4.06.1"}
  "dune"          {build & >= "1.4"}
  "reason"        { >= "3.4.0"}
]
synopsis: "Use Reason values from Javascript: vanilla, or TypeScript/FlowType-annotated"
