opam-version: "2.0"
authors: "Cristiano Calcagno"
homepage: "https://github.com/cristianoc/genType"
bug-reports: "https://github.com/cristianoc/genType/issues"
dev-repo: "https://github.com/cristianoc/genType.git"

depends: [
  "ocaml" {>= "4.06.1"}
  "reason" {= "3.6.0"}
  "dune" {build & >= "1.7.3"}
]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
