opam-version: "2.0"
authors: "Cristiano Calcagno"
homepage: "https://github.com/rescript-association/genType"
bug-reports: "https://github.com/rescript-association/genType/issues"
dev-repo: "https://github.com/rescript-association/genType.git"

depends: [
  "ocaml" {>= "4.06.1"}
  "dune" {>= "1.7.3"}
]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
